<resources>
    <string name="app_name">Givelify</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDm_MFwCYejdN1sd6wuwTVD_QCtTwVJ-cY</string>

    <string name="donations_logo">Givelify Logo</string>
    <string name="sign_up_text">Your Details</string>
    <string name="full_name_sign_up">Full Name</string>
    <string name="email_sign_up">Email</string>
    <string name="phone_number_sign_up">Phone Number</string>
    <string name="password_sign_up">Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="login_text">Login</string>
    <string name="email_login_text">Email</string>
    <string name="password_text_login">Password</string>
    <string name="login_button">Login</string>
    <string name="logo">Logo</string>
    <string name="dc_register_header">Register a Donation Centre</string>
    <string name="email_reg_text">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reg_description">Description of the Organization</string>
    <string name="reg_org_name">Name of Organization</string>
    <string name="already_have_an_account">Already have an Account? Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="city">City</string>
    <string name="donate_today">Donate Today! Giving is about making a difference.</string>
    <string name="registration_successful">Registration Successful!</string>
    <string name="sent_verification">We have sent a verification email to you at</string>
    <string name="example_email">example@gmail.com</string>
    <string name="navigate_next">Navigate next</string>
    <string name="no_account_sign_up">Have no account? Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="upload_a_photo">Upload a Photo</string>
    <string name="donation_centers_near_you">Donation Centers Near You</string>
    <string name="find_dcenters">find dcenters</string>
    <string name="find">Find</string>
    <string name="hello_user">Hello User!</string>
    <string name="find_image">find_dcenters_image</string>
    <string name="nairobi">Nairobi</string>
    <string name="upload_image">Upload Image</string>
    <string name="donation_centre_image">Donation Centre Image</string>
    <string name="gallery">Gallery</string>
    <string name="donation_items_list">Donation Items List</string>
    <string name="about_us">About Us</string>
    <string name="view">View</string>
    <string name="fab_donate">FAB Donate</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="popular_donation_items">Popular Donation Items</string>
    <string name="title_activity_donation_items">DonationItems</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_dc_donation_items">DcDonationItemsActivity</string>
    <string-array name="categories_spinner">
        <item>Category</item>
        <item>Animal Welfare</item>
        <item>Arts and Culture</item>
        <item>Peace and Human Rights</item>
        <item>Community Development</item>
        <item>Education</item>
        <item>Environmental</item>
        <item>Health</item>
        <item>Human Services</item>
        <item>International NGOs</item>
    </string-array>
    <string-array name="cities_spinner">
        <item>City</item>
        <item>Nairobi</item>
        <item>Nakuru</item>
        <item>Mombasa</item>
        <item>Kisumu</item>
        <item>Kiambu</item>
    </string-array>

    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_discover">Discover</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="updated">Profile Updated Successfully</string>
    <string name="hello">Hello</string>
    <string name="website_optional">Website (optional)</string>
    <string name="accepted_items">Accepted Items</string>
    <string name="prohibited_items">Prohibited Items</string>
    <string name="common_donation_items">Common Donation Items</string>
    <string name="map">Map</string>
    <string name="donatemenu">Donate</string>
    <string name="discover">Discover</string>
    <string name="title_activity_pickup2">PickupActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="multi_select_dialog_title">Select Areas</string>
    <string name="title_activity_dc_pickup">DcPickupActivity</string>
    <string name="small">Small</string>

</resources>