<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_item_main"
        android:icon="@drawable/ic_home_black_24dp"
        android:orderInCategory="1"
        android:title="@string/title_home" />
    <item
        android:id="@+id/nav_item_discover"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:iconTint="@color/dark_pink"
        android:orderInCategory="2"
        android:title="@string/discover" />
    <item
        android:id="@+id/placeholder"
        android:iconTint="@color/dark_pink"
        android:title=""
        android:orderInCategory="3" />
    <item
        android:id="@+id/nav_item_map"
        android:icon="@drawable/ic_map"
        android:orderInCategory="4"
        android:title="@string/map" />
    <item
        android:id="@+id/nav_item_user"
        android:icon="@drawable/ic_profile"
        android:orderInCategory="5"
        android:title="@string/profile" />
</menu>