<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="@color/pink_background"
    tools:context=".DcRegistrationActivity">

    <ImageView
        android:id="@+id/givelify_logo"
        android:layout_width="142dp"
        android:layout_height="80dp"
        android:contentDescription="@string/logo"
        android:padding="0dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="764dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/shape"
        android:elevation="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/givelify_logo"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/dc_reg_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/dc_register_header"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/muted_pink"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="true"
            android:background="@drawable/et_shape"
            android:drawableStart="@drawable/ic_person"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/reg_org_name"
            android:inputType="text" />

        <Spinner
            android:id="@+id/spinner_categories"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/et_shape"
            android:dropDownSelector="@android:drawable/btn_dropdown"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="true"
            android:background="@drawable/et_shape"
            android:drawableStart="@drawable/ic_email"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/email_reg_text"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/phone_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="true"
            android:background="@drawable/et_shape"
            android:drawableStart="@drawable/ic_phone"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/phone_number_sign_up"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.525"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/et_shape"
            android:drawableStart="@drawable/ic_password"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password_text_login"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/reg_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/et_shape"
            android:drawableStart="@drawable/ic_password"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinner_cities"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/et_shape" />

        <EditText
            android:id="@+id/website_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="true"
            android:background="@drawable/et_shape"
            android:drawableStart="@drawable/ic_globe"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/website_optional"
            android:inputType="text" />

        <MultiAutoCompleteTextView
            android:id="@+id/reg_description"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/et_shape"
            android:fontFamily="@font/montserrat"
            android:hint="@string/reg_description"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/dark_pink"
            android:elevation="10dp"
            android:fontFamily="@font/montserrat"
            android:padding="15dp"
            android:text="@string/sign_up_button"
            app:cornerRadius="20dp" />

        <TextView
            android:id="@+id/already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/already_have_an_account" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>