<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_background"
    android:textAlignment="center"
    android:theme="@style/fullscreen"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:id="@+id/givelify_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/logo"
        android:padding="0dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/donations_image"
        android:layout_width="match_parent"
        android:layout_height="306dp"
        android:contentDescription="@string/donations_logo"
        android:src="@drawable/donations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/givelify_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:padding="30dp"
        android:text="@string/donate_today"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/dark_blue"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donations_image" />


</androidx.constraintlayout.widget.ConstraintLayout>